Put Todos/ into a separate page and config next to load todos/ page on load. While not necessary it demonstrates use of next and routes. When testing we can also focus purely on this route page /todos rather than a generic index page. Create jest.config.js so that we can continue to use moduler resolver approach with relative paths. Add coverage information. Allow  any further jest config. Setup basic react-testing-library rest to ensure page loads

--- a/todos-app/tsconfig.json
+++ b/todos-app/tsconfig.json
@@ -16,9 +16,10 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "src/*": ["src/*"]
+      "src/*": ["src/*"],
+      "__tests__/*": ["__tests__/*"]
     },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/*"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/*", "__tests__/*"],
   "exclude": ["node_modules"]
 }
