--- a/todos-app/package.json
+++ b/todos-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --maxWorkers=50%"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -14,6 +15,7 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
     "@types/jest": "^28.1.1",
