--- a/todos-app/package.json
+++ b/todos-app/package.json
@@ -10,9 +10,11 @@
     "test": "jest --maxWorkers=50%"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -30,8 +32,12 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^28.1.1",
     "jest-transform-stub": "^2.0.0",
+    "msw": "^0.42.0",
     "react-test-renderer": "^18.1.0",
     "ts-jest": "^28.0.4",
     "typescript": "4.7.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
