--- a/node-app/package.json
+++ b/node-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.16"
   }
 }
