--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --maxWorkers=50%"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
@@ -23,8 +26,10 @@
     "@types/jest": "^28.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "17.0.40",
-    "@types/react": "18.0.12",
+    "@types/react": "^18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/react-redux": "^7.1.24",
+    "cross-env": "^7.0.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "eslint-import-resolver-babel-module": "^5.3.1",
@@ -34,6 +39,7 @@
     "jest-transform-stub": "^2.0.0",
     "msw": "^0.42.0",
     "react-test-renderer": "^18.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "ts-jest": "^28.0.4",
     "typescript": "4.7.3"
   },
