Fix eslint issues with alias. Extend eslint. Update jest to support alias
update package.json release numbers

Keep render pure beforeAll on separate test

--- a/node-app/package.json
+++ b/node-app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "version": "1.0.0",
+  "name": "todos-node-app",
+  "version": "0.1.0",
   "description": "",
   "main": "nodeServerExample.js",
   "scripts": {
