--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todos-app",
+  "name": "todos-react-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,37 +7,54 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --maxWorkers=50%"
+    "test": "jest --maxWorkers=50%",
+    "prettier-log": "prettier-eslint \"src/**/*.{js,ts,tsx}\" --list-different",
+    "prettier-write": "prettier-eslint --write \"src/**/*.{js,ts,tsx}\""
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^28.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "17.0.40",
     "@types/react": "^18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/react-redux": "^7.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "cross-env": "^7.0.3",
     "eslint": "8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.1",
+    "jest-css-modules": "^2.1.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^28.1.1",
     "jest-transform-stub": "^2.0.0",
     "msw": "^0.42.0",
+    "prettier": "^2.6.2",
+    "prettier-eslint": "^15.0.1",
     "react-test-renderer": "^18.1.0",
     "redux-devtools-extension": "^2.13.9",
     "ts-jest": "^28.0.4",
