--- a/node-app/package.json
+++ b/node-app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "nodeServerExample.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "pg": "psql"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "node-cache": "^5.1.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "pg": "^8.7.3"
   }
 }
