Create .env file. Supply .env to docker-compose. Read .env from node app.

--- a/node-app/pg/docker-compose.yml
+++ b/node-app/pg/docker-compose.yml
@@ -2,14 +2,14 @@ version: "2"
 
 services:
   db:
-    container_name: postgres_todos
+    container_name: todos
     image: postgres:12
     environment:
       # How to connect (Need to specify actual database aswell as user)
       # docker exec -it postgres_todos psql -U postgres_todos_user -d postgres_todos_db 
-      POSTGRES_DB: postgres_todos_db
-      POSTGRES_USER: postgres_todos_user
-      POSTGRES_PASSWORD: postgres_todos_pwd
+      - POSTGRES_DB=${PG_DB}
+      - POSTGRES_USER=${PG_USER}
+      - POSTGRES_PASSWORD=${PG_PWD}
     ports:
           - "5432:5432"
     volumes:
@@ -20,5 +20,7 @@ services:
 volumes:
   # Will create docker volume with name of the container folder: sql/postgresql = sql_postgresql
   ## example remove:  docker volume rm  sql_postgresql
-  postgresql: 
+  postgresql:
   postgresql_data:
+
+
