--- a/node-app/package.json
+++ b/node-app/package.json
@@ -2,9 +2,9 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "nodeServerExample.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon -r dotenv/config src/server.ts dotenv_config_path=\"../.env\"",
     "pg": "psql"
   },
   "keywords": [],
@@ -15,6 +15,14 @@
     "express": "^4.18.1",
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.16",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "slonik": "^27.1.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/pg": "^8.6.5"
   }
 }
