--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "server": "cd node-app && npm start",
     "client": "cd react-app && npm run dev",
     "start": "concurrently \"npm run db\" \"npm run server\" \"npm run client\"",
-    "db-clear-volume": "docker volume rm postgres-db_postgresql && docker volume rm postgres-db_postgresql_data",
+    "db-clear-volume": "docker volume rm postgres-db_pgdata",
     "db-clear": "cd postgres-db && docker-compose down && npm run db-clear-volume"
   },
   "dependencies": {
     "concurrently": "^7.2.1",
-    "dotenv": "^16.0.1",
-    "pg": "^8.7.3"
+    "dotenv": "^16.0.1"
   }
 }
