--- a/postgres-db/Dockerfile
+++ b/postgres-db/Dockerfile
@@ -1,6 +1,6 @@
 FROM postgres
+# Env variable is not sufficient here. Need arg.
 ARG PG_TABLE
-
 ADD seed.sql /docker-entrypoint-initdb.d/seed.sql
 
 # pass variable PG_TABLE to script.sh to replace ${PG_TABLE} with .env variable in seed.sql
@@ -8,4 +8,3 @@ WORKDIR /scripts
 COPY script.sh .
 RUN chmod +x script.sh
 RUN /scripts/script.sh PG_TABLE "${PG_TABLE}"
-
