--- a/node-app/tsconfig.json
+++ b/node-app/tsconfig.json
@@ -16,7 +16,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true                         
+    "incremental": true,
+    "paths": {
+      "src/*": ["src/*"]
+    },                       
   },
   "exclude":[
     "./node_modules"
