--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "db": "cd postgres-db && docker-compose --env-file \"../.env\" up --build",
+    "db": "cd postgres-db && docker-compose --env-file \"../.env\" up --build -d",
     "server": "cd node-app && npm start",
     "client": "cd react-app && npm run dev",
     "start": "concurrently \"npm run db\" \"npm run server\" \"npm run client\"",
     "db-clear-volume": "docker volume rm postgres-db_pgdata",
-    "db-clear": "cd postgres-db && docker-compose down && npm run db-clear-volume"
+    "db-clear": "npm run db-export && cd postgres-db && docker-compose down && npm run db-clear-volume",
+    "db-export": "cd postgres-db && node export.js"
   },
   "dependencies": {
     "concurrently": "^7.2.1",
     "dotenv": "^16.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0"
   }
 }
