--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "server": "cd node-app && npm start",
     "client": "cd react-app && npm run dev",
     "start": "concurrently \"npm run db\" \"npm run server\" \"npm run client\"",
-    "db-clear-volume": "docker volume rm postgres-db_pgdata",
-    "db-clear": "npm run db-export && cd postgres-db && docker-compose down && npm run db-clear-volume",
     "db-export": "cd postgres-db && node export.js",
-    "db-export-stopped-container": "docker restart container-db && npm run db-export",
-    "db-export-missing-container": "cd postgres-db/restore && docker-compose --env-file \"../../.env\" up && npm run db-export"
+    "db-clear": "npm run db-export && cd postgres-db && docker-compose down && docker volume rm postgres-db_pgdata"
   },
   "dependencies": {
     "concurrently": "^7.2.1",
