--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "client": "cd react-app && npm run dev",
     "start": "concurrently \"npm run db\" \"npm run server\" \"npm run client\"",
     "db-export": "cd postgres-db && node export.js",
-    "db-clear": "npm run db-export && cd postgres-db && docker-compose down && docker volume rm postgres-db_pgdata"
+    "db-clear": "npm run db-export && cd postgres-db && docker-compose down && docker volume rm postgres-db_pgdata",
+    "mongo": "cd mongodb && docker-compose --env-file \"../.env\" up",
+    "dockerTestArg": "cd dockerTestArg && docker-compose --env-file \"../.env\" up"
   },
   "dependencies": {
     "concurrently": "^7.2.1",
