--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -11,12 +11,28 @@ services:
       - MONGO_INITDB_DATABASE=auth
     volumes:
       - ./db:/data/db
+      - ./init-mongo-js.sh:/docker-entrypoint-initdb.d/init-mongo.sh:ro
     restart: unless-stopped
     networks:
       - mongo-network
+
+  dbseed: # Create separate service to import into mongo after mongo is loaded up.
+    container_name: dbseed
+    build:
+      context: .
+      args: # Needed for import csv - CMD
+        - MONGO_DB_NAME=${MONGO_DB_NAME}
+        - MONGO_TABLE_COLLECTION_NAME=${MONGO_TABLE_COLLECTION_NAME}
+        - MONGO_USER=${MONGO_USER}
+        - MONGO_PASS=${MONGO_PASS}
+    depends_on:
+    - ${MONGO_HOST}
+    networks:
+      - mongo-network
+      
+    restart: unless-stopped
   mongo-express:
-    # build:
-    #   context: ./mongoexpress/
+
     container_name: mongo-express
     image: mongo-express
     restart: always
@@ -32,14 +48,13 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
       - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASS}
 
-      - ENV_MONGO_USER=${MONGO_USER}
-      - ENV_MONGO_PASS=${MONGO_PASS}
-
+      # Needed for import csv - CMD
+      # - ENV_MONGO_DB_NAME=${MONGO_DB_NAME}
+      # - ENV_MONGO_TABLE_COLLECTION_NAME=${MONGO_TABLE_COLLECTION_NAME}
     depends_on:
       - ${MONGO_HOST}
     networks:
       - mongo-network
-    # command: ["./wait-for-it.sh", "mongodb://${MONGO_USER}${':'}${MONGO_PASS}@mongo1${':'}27017/admin"]
 volumes:
   volume-mongo:
     driver: local
