--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -8,31 +8,44 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
-      - MONGO_INITDB_DATABASE=auth
+
+      # Need for init-mongo-js.sh
+      - MONGO_COLLECTION=${MONGO_COLLECTION}
+
     volumes:
-      - ./db:/data/db
+      - volume-mongo:/data/db
+      # Needed permissions for specific user - MONGO_USER
       - ./init-mongo-js.sh:/docker-entrypoint-initdb.d/init-mongo.sh:ro
+
     restart: unless-stopped
     networks:
       - mongo-network
 
-  dbseed: # Create separate service to import into mongo after mongo is loaded up.
-    container_name: dbseed
-    build:
-      context: .
-      args: # Needed for import csv - CMD
-        - MONGO_DB_NAME=${MONGO_DB_NAME}
-        - MONGO_TABLE_COLLECTION_NAME=${MONGO_TABLE_COLLECTION_NAME}
-        - MONGO_USER=${MONGO_USER}
-        - MONGO_PASS=${MONGO_PASS}
+  node-import:
+    container_name: node-import
+    build: 
+      context: ./node-import-csv
+    environment:
+      - MONGO_HOST=$MONGO_HOST
+      - MONGO_DB=$MONGO_DB
+      - MONGO_USER=$MONGO_USER
+      - MONGO_PASS=$MONGO_PASS
+      - MONGO_PORT=$MONGO_PORT
+      - MONGO_COLLECTION=$MONGO_COLLECTION
+
+      # While MONGO_HOST and MONGO_PORT is supplied above, 
+      # better to keep generic wait.sh file for other usecase and supply 
+      # specific name  WAIT_HOST and WAIT_PORT here...
+      - WAIT_HOST=$MONGO_HOST
+      - WAIT_PORT=$MONGO_PORT
+    ports:
+      - 8000:8000
     depends_on:
     - ${MONGO_HOST}
     networks:
       - mongo-network
-      
-    restart: unless-stopped
-  mongo-express:
 
+  mongo-express:
     container_name: mongo-express
     image: mongo-express
     restart: always
@@ -47,10 +60,6 @@ services:
       - ME_CONFIG_MONGODB_SERVER=${MONGO_HOST}
       - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
       - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASS}
-
-      # Needed for import csv - CMD
-      # - ENV_MONGO_DB_NAME=${MONGO_DB_NAME}
-      # - ENV_MONGO_TABLE_COLLECTION_NAME=${MONGO_TABLE_COLLECTION_NAME}
     depends_on:
       - ${MONGO_HOST}
     networks:
