--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "db": "cd postgres-db && docker-compose --env-file \"../.env\" up --build ",
-    "server": "cd node-app && npm start",
+    "server-pg": "cd node-app-pg && npm start",
     "client": "cd react-app && npm run dev",
-    "start": "concurrently \"npm run db\" \"npm run server\" \"npm run client\"",
+    "start": "concurrently \"npm run db\" \"npm run server-pg\" \"npm run client\"",
     "db-export": "cd postgres-db && node export.js",
     "db-clear": "npm run db-export && cd postgres-db && docker-compose down && docker volume rm postgres-db_pgdata",
     "mongo": "cd mongodb && docker-compose --env-file \"../.env\" up",
