Arrange files so when importing and exporting it lands in the same location

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ PG_USER=postgres_todos_user
 PG_DB=postgres_todos_db
 PG_PWD=postgres_todos_pwd
 PG_TABLE=todos
+
+# mongo
+MONGO_DB=mongo_todos_db
+MONGO_USER=boot
+MONGO_PASS=secret
+MONGO_HOST=mongo1
+MONGO_PORT=27017
+MONGO_COLLECTION=todos
+
