--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - MONGO_COLLECTION=${MONGO_COLLECTION}
 
     volumes:
-      - volume-mongo:/data/db
+      - ./mongodb_data:/data/db
       # Needed permissions for specific user - MONGO_USER
       - ./init-mongo-js.sh:/docker-entrypoint-initdb.d/init-mongo.sh:ro
 
@@ -24,7 +24,7 @@ services:
   node-import:
     container_name: node-import
     build: 
-      context: ./node-import-csv
+      context: .
     environment:
       - MONGO_HOST=$MONGO_HOST
       - MONGO_DB=$MONGO_DB
@@ -45,28 +45,29 @@ services:
     networks:
       - mongo-network
 
-  mongo-express:
-    container_name: mongo-express
-    image: mongo-express
-    restart: always
-    ports:
-      - '8081:8081'
-    environment:
-      - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
-      - ME_CONFIG_BASICAUTH_USERNAME=${MONGO_USER}
-      - ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_PASS}
-      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
-      - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
-      - ME_CONFIG_MONGODB_SERVER=${MONGO_HOST}
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASS}
-    depends_on:
-      - ${MONGO_HOST}
-    networks:
-      - mongo-network
+  # Optional: if you want a web gui to access
+  # mongo-express:
+  #   container_name: mongo-express
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - '8081:8081'
+  #   environment:
+  #     - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
+  #     - ME_CONFIG_BASICAUTH_USERNAME=${MONGO_USER}
+  #     - ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_PASS}
+  #     - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
+  #     - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
+  #     - ME_CONFIG_MONGODB_SERVER=${MONGO_HOST}
+  #     - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
+  #     - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASS}
+  #   depends_on:
+  #     - ${MONGO_HOST}
+  #   networks:
+  #     - mongo-network
 volumes:
-  volume-mongo:
-    driver: local
+  mongodb_data:
+  mongodb_init:
 
 networks:
   mongo-network:
