--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "db": "cd postgres-db && docker-compose --env-file \"../.env\" up --build ",
+    "pg": "cd postgresdb && docker-compose --env-file \"../.env\" up --build ",
     "server-pg": "cd node-app-pg && npm start",
     "client": "cd react-app && npm run dev",
-    "start": "concurrently \"npm run db\" \"npm run server-pg\" \"npm run client\"",
-    "pg-export": "cd postgres-db && node export.js",
-    "pg-clear": "npm run db-export && cd postgres-db && docker-compose down && docker volume rm postgres-db_pgdata",
+    "start": "concurrently \"npm run pg\" \"npm run server-pg\" \"npm run client\"",
+    "pg-export": "cd postgresdb && node -r dotenv/config export.js dotenv_config_path=\"../.env\"",
+    "pg-clear": "npm run pg-export && cd postgresdb && docker-compose down && docker volume rm postgresdb_pgdata",
     "mongo": "cd mongodb && docker-compose --env-file \"../.env\" up",
-    "mongo-export": "cd mongodb && node export.js",
+    "mongo-export": "cd mongodb && node -r dotenv/config export.js dotenv_config_path=\"../.env\"",
     "mongo-clear": "npm run mongo-export && cd mongodb && docker-compose down && docker volume rm mongodb_mongodb_data && docker rm mongodb_mongodb_init",
     "dockerTestArg": "cd dockerTestArg && docker-compose --env-file \"../.env\" up"
   },
