--- a/node-app-mongo/package.json
+++ b/node-app-mongo/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "node-app-pg",
+  "name": "node-app-mongo",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "nodemon -r dotenv/config src/server.ts dotenv_config_path=\"../.env\"",
-    "pg": "psql"
+    "start": "nodemon -r dotenv/config src/server.ts dotenv_config_path=\"../.env\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "node-cache": "^5.1.2",
-    "nodemon": "^2.0.16",
-    "slonik": "^28.1.1",
+    "mongoose": "^6.4.0",
+    "nodemon": "^2.0.18",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/pg": "^8.6.5"
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.0.0"
   }
 }
